# lab-control

./: .env  .gitignore  LICENSE  README.md  build  docker-compose.yml  install  install.sh  nginx.conf
.github/workflows/: node-frontend.yml  node.js.yml  release.yml  rust-backend.yml  rust-fingerprint.yml  rust.yml
backend/: .env  Cargo.toml  back.Cargo.toml  docker-compose.yml  docs.json  readme.md
backend/docs/: Lab-Access.excalidraw
backend/src/: lib.rs  logs.rs  main.rs
backend/src/api/: guard.rs  mod.rs  routes.rs  utils.rs
backend/src/api/admins/: controller.rs  mod.rs  models.rs  routes.rs
backend/src/api/metadata/: mod.rs
backend/src/api/metadata/motivos/: controller.rs  routes.rs
backend/src/api/metadata/roles/: controller.rs  mod.rs  models.rs  routes.rs
backend/src/api/motivos/: controller.rs
backend/src/api/personas/: mod.rs  models.rs  routes.rs
backend/src/api/personas/controller/: edit.rs  enroll.rs  get_all.rs  get_by_rut.rs  manual_verify.rs  mod.rs  remove_by_rut.rs  reroll.rs  search.rs  utils.rs  verify.rs
backend/src/api/registros/: controller.rs  mod.rs  models.rs  routes.rs
backend/src/api/users/: routes.rs
backend/src/api/users/controller/: edit.rs  enroll.rs  get_all.rs  get_by_rut.rs  mod.rs  remove_by_rut.rs  utils.rs  verify.rs
backend/src/database/: init.sql  mod.rs  pool.rs
backend/src/database/entities/: admins.rs  mod.rs  motivos.rs  personas.rs  prelude.rs  registros.rs  roles.rs  users.rs
deploy/: .env  .rustc_info.json  Dockerfile  Release.md  changeip  docker-compose.yml  init.sql  nginx.conf
deploy/frontend/: index.html
deploy/frontend/assets/: index-0f80f6d9.js  index-4309599e.css  index-5815e39d.js  index-6259c7e0.js  index-Bc25Hdk4.js  index-DqrXfAsB.css  index-a7e73097.js  index-af7a4a31.css  index-bab8751c.js
deploy/pem/: cert.pem  key.pem
fingerprint-rs/: .gitignore  Cargo.toml  README.md  client
fingerprint-rs/src/: enroll.rs  main.rs  socket.rs  socket_server.rs  utilities.rs  verify.rs  write_to_file.rs
frontend/: .env  .prettierrc  index.html  package.json  vite.config.ts
frontend/lab-control/: package.json  tsconfig.json
frontend/lab-control/lib/: auth.service.test.ts  auth.service.ts  delete.service.test.ts  delete.service.ts  get.service.test.ts  get.service.ts  index.ts  post.service.ts  types.ts
frontend/src/: App.vue  Router.ts  main.ts  style.css
frontend/src/components/: Admins.vue  EditUsuario.vue  Info.vue  Login.vue  Motivos.vue  Navbar.vue  NuevoAdmin.vue  NuevoUsuario.vue  Registros.vue  Roles.vue  Search.vue  Usuarios.vue  Verificar.vue
frontend/src/components/QRReader/: QRCode.vue  QRTypes.ts  VueQrcodeReader.ts
frontend/src/services/: auth.service.ts  delete.service.ts  get.service.ts  post.service.ts  types.ts
frontend/src/stores/: AdminStore.ts  MotivoStore.ts  RegistrosStore.ts  RolStore.ts  UsuarioStore.ts
