[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-session = "3.0.0"
async-sqlx-session = { version = "0.4.0", features = ["pg"] }
axum = { version = "0.6.18", default-features = false, features = [
  "ws",
  "json",
  "query",
] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
axum-server = { version = "0.5.1", default-features = false }
bcrypt = { features = ["std"], default-features = false, version = "0.15.0" }
chrono = { default-features = false, version = "0.4.26" }
lazy_static = "1.4.0"
regex = { version = "1.8.4", default-features = false, features = [
  "std",
  "unicode-perl",
] }
sea-orm = { version = "0.12.3", features = [
  "macros",
  "with-chrono",
  "sqlx-postgres",
  "with-json",
], default-features = false }
serde = { version = "1.0.163", default-features = false }
serde_json = { default-features = false, version = "1.0.96" }
sqlx = { version = "0.7.2", default-features = false, features = [
  "runtime-tokio-rustls",
] }
tokio = { version = "1.28.2", default-features = false, features = [
  "rt-multi-thread",
] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = { default-features = false, version = "0.1.37" }
tracing-subscriber = { features = [
  "ansi",
], default-features = false, version = "0.3.17" }
tungstenite = "0.20.1"
utoipa = "3.5.0"
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
lto = true
