[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-session = "3.0.0"
async-sqlx-session = { version = "0.4.0", features = ["pg"] }
axum = { version = "0.7.5", default-features = false, features = [
    "ws",
    "json",
    "query",
] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
axum-server = { version = "0.7.1", default-features = false }
bcrypt = { version = "0.15.1", default-features = false, features = ["std"] }
chrono = { version = "0.4.38", default-features = false }
csv = "1.3.0"
lazy_static = "1.5.0"
regex = { version = "1.10.6", default-features = false, features = [
    "std",
    "unicode-perl",
] }
sea-orm = { version = "1.0.1", features = [
    "macros",
    "with-chrono",
    "sqlx-postgres",
    "with-json",
] }
serde = { version = "1.0.210", default-features = false }
serde_json = { version = "1.0.128", default-features = false }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.40.0", features = [
    "rt-multi-thread",
], default-features = false }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = { default-features = false, version = "0.1.40" }
tracing-subscriber = { features = [
    "ansi",
], default-features = false, version = "0.3.18" }
tungstenite = "0.24.0"

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
lto = true
