[package]
name = "fingerprint-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfprint-rs = "=0.2.2"
local-ip-address = "0.5.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tungstenite = "0.20.1"
uuid = { version = "1.3.2", features = ["v4"] }

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
lto = true
